Fixed duplicated checkmarks

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -143,21 +143,19 @@
                                 <jira-progress></jira-progress>
                                 <div class="flex flex-col gap-2">
                                     <jira-task>
-                                        <div class="flex w-5 h-5 rounded-md items-center justify-center bg-[#904ee2]">
-                                            <i class="ph ph-check" style="color: #fff; font-size: 0.75rem;"></i>
-                                        </div>
+                                        <jira-checkmark></jira-checkmark>
                                         <p>Design the vendor transactions table</p>
                                     </jira-task>
-                                    <jira-task>
-                                        <div class="flex w-5 h-5 rounded-md items-center justify-center border border-solid border-bk-32"></div>
+                                    <jira-task class="opacity-50">
+                                        <jira-checkmark></jira-checkmark>
                                         <p>Redesign layout of vendor card</p>
                                     </jira-task>
                                     <jira-task class="opacity-50">
-                                        <div class="flex w-5 h-5 rounded-md items-center justify-center border border-solid border-bk-32"></div>
+                                        <jira-checkmark></jira-checkmark>
                                         <div class="w-9/12 h-5 rounded-md bg-bk-12"></div>
                                     </jira-task>
                                     <jira-task class="opacity-50">
-                                        <div class="flex w-5 h-5 rounded-md items-center justify-center border border-solid border-bk-32"></div>
+                                        <jira-checkmark></jira-checkmark>
                                         <div class="w-9/12 h-5 rounded-md bg-bk-12"></div>
                                     </jira-task>
                                 </div>
