Added banner image template

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -162,6 +162,9 @@
                             </div>
                             <h3 class="flex-3">Explanation</h3>
                         </div>
+                        <banner-image 
+                            src="/src/assets/midaflow/6513414b4bb9ffe9ed30bfed_Dashboard.webp">
+                        </banner-image>
                     </div>
                 </div>
             </div>
