Changed the flex for design section to accommodate new idea (all-in-one)

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -123,7 +123,7 @@
                         components for the tasks I was assigned to.</h3>
                     <div class="flex flex-col gap-8">
                         <div class="flex gap-8">
-                            <div class="flex flex-col flex-2 gap-8 p-8 bg-gy rounded-2xl relative">
+                            <div class="flex flex-col flex-1 gap-8 p-8 bg-gy rounded-2xl relative">
                                 <jira-breadcrumbs>
                                     <p class="font-medium">MID-1</p>
                                 </jira-breadcrumbs>
@@ -131,12 +131,12 @@
                                 <div class="flex flex-col gap-2">
                                     <h5 class="font-semibold">Description</h5>
                                     <h6>As a user, I should be able to:</h6>
-                                    <div class="flex gap-2 items-center">
-                                        <i class="ph-fill ph-circle" style="font-size: 0.5rem; padding: 0 0 0 1rem"></i>
+                                    <div class="flex gap-2">
+                                        <i class="ph-fill ph-circle" style="font-size: 0.5rem; padding: 0.5625rem 0 0 1rem"></i>
                                         <h6>access/manage my vendor's information</h6>
                                     </div>
-                                    <div class="flex gap-2 items-center">
-                                        <i class="ph-fill ph-circle" style="font-size: 0.5rem; padding: 0 0 0 1rem"></i>
+                                    <div class="flex gap-2">
+                                        <i class="ph-fill ph-circle" style="font-size: 0.5rem; padding: 0.5625rem 0 0 1rem"></i>
                                         <h6>access my transaction history with a vendor</h6>
                                     </div>
                                 </div>
@@ -160,7 +160,7 @@
                                     </jira-task>
                                 </div>
                             </div>
-                            <h3 class="flex-3">Explanation</h3>
+                            <h3 class="flex-2">Explanation</h3>
                         </div>
                         <banner-image 
                             src="/src/assets/midaflow/6513414b4bb9ffe9ed30bfed_Dashboard.webp">
