Changed formatting for dots for readability

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -162,9 +162,18 @@
                             </div>
                             <div class="flex flex-2 relative justify-center items-center">
                                 <img src="/src/assets/midaflow/Transactions Component.png" class="w-4/5 h-4/5">
-                                <div class="dot" data-info="<h3>Dot 1 Title</h3><p>Information about Dot 1.</p>" style="top: 20%; left: 30%;"></div>
-                                <div class="dot" data-info="Vendor Transactions 2" style="top: 50%; left: 60%;"></div>
-                                <div class="dot" data-info="Vendor Transactions 3" style="top: 70%; left: 40%;"></div>
+                                <div class="dot" style="top: 20%; left: 30%;" data-info="
+                                    <h3>Dot 1 Title</h3>
+                                    <p>Information about Dot 1.</p>">
+                                </div>
+                                <div class="dot" style="top: 50%; left: 60%;" data-info="
+                                    <h3>Dot 2 Title</h3>
+                                    <p>Information about Dot 2.</p>">
+                                </div>
+                                <div class="dot" style="top: 70%; left: 40%;" data-info="
+                                    <h3>Dot 3 Title</h3>
+                                    <p>Information about Dot 3.</p>">
+                                </div>
                             </div>
                             <div class="dropdown" id="dropdown"></div>
                         </div>
