--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -99,7 +99,7 @@
                     <img src="/src/assets/midaflow/research.svg">
                     <h3>Both systems integrate and streamline various aspects of core business activities, and serve as a centralized hub for their organization.
                         <strong>This comparison helped me understand the core concept of an ERP software system.</strong></h3>
-                    <h2 class="pt-8">Learning what works and what doesn't</h2>
+                    <h2 class="pt-16">Learning what works and what doesn't</h2>
                     <h3><strong>Given the project's time constraints and the extensive research already conducted by the founders, further research was not a priority. </strong>
                         So in order for us interns to get a better idea on what could be improved, we conducted discovery research by analyzing user feedback 
                         on our competitors. This allowed us to identify common strengths and weaknesses.</h3>
@@ -107,14 +107,14 @@
                     <h3>Based on the feedback, we can see that users value a product that is easy-to-use and reliable. They appreciate intuitive designs tailored for 
                         both end-users and administrators, as well as strong customer support. However, a wide range of features can overwhelm and confuse users, 
                         and persistent issues with supplier integration despite regular support can be a major concern.</h3>
-                    <h2 class="pt-8">The lifecycle of an invoice</h2>
+                    <h2 class="pt-16">The lifecycle of an invoice</h2>
                     <h3>A key responsibility I had for this project was designing components for the lifecycle of an invoice. <strong>My only experience with invoices
                         was during my time running an eCommerce business where I regularly processed and paid invoices for goods purchased. Nothing too complex.</strong>
                         However, I did not have any experience with the complete lifecycle of an invoice from both the end-user and issuer perspectives. <strong>Similar
                         to my experience with ERP software systems, this would have posed a significant challenge when designing for this lifecycle.</strong>
-                        To address this, I mapped out and analyzed the entire invoice lifecycle, detailing the requirements and features for each stage.</h3>
-                    <h3>Lifecycle Image</h3>
-                    <h3>Lifecycle Result Placeholder</h3>
+                        To address this issue, I mapped out and analyzed the entire invoice lifecycle, detailing the requirements and features for each stage.</h3>
+                    <h3>[Lifecycle Image]</h3>
+                    <h3>[Lifecycle Result Placeholder]</h3>
                 </div>
                 <div id="design" class="flex flex-col gap-16 py-12">
                     <h2>Now we're on to the good stuff</h2>
@@ -549,6 +549,18 @@
                             <div class="dropdown" id="dropdown"></div>
                         </div>
                     </div>
+                    <h2 class="pt-16">Honestly, I'm not a big fan of how it looks</h2>
+                    <h3>After handing off the components to our developers, I was tasked with upgrading our user interface to give it liveliness and identity. 
+                        <strong>Additionally, the lack of a standardized design system had resulted in some inconsistencies between my designs and those of other designers which 
+                        needed to be addressed.</strong> This is a brief concept of what the new design would look like.</h3>
+                    <h3>[That banner with the before and after]</h3>
+                </div>
+                <div id="final" class="flex flex-col gap-16 py-12">
+                    <h2>My final thoughts</h2>
+                    <h3>This experience has been incredibly valuable for my professional development. As my first professional role as a Product Designer for a startup, it 
+                        has provided me with a wealth of knowledge and practical experience. I have gained a deeper understanding of the skills and responsibilities required 
+                        to excel in this field. From collaborating with developers to addressing challenges in new industries, I have learned 
+                        the importance of adaptability, communication, and attention to detail.</h3>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
