Slight text changes

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -557,7 +557,7 @@
                 </div>
                 <div id="final" class="flex flex-col gap-16 py-12">
                     <h2>My final thoughts</h2>
-                    <h3>This experience has been incredibly valuable for my professional development. As my first professional role as a Product Designer for a startup, it 
+                    <h3>This experience has been incredibly valuable for my professional development. As what I consider to be my first professional role as a Product Designer, it 
                         has provided me with a wealth of knowledge and practical experience. I have gained a deeper understanding of the skills and responsibilities required 
                         to excel in this field. From collaborating with developers to addressing challenges in new industries, I have learned 
                         the importance of adaptability, communication, and attention to detail.</h3>
