--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -80,45 +80,45 @@
                 </div>
                 <div id="context" class="flex flex-col gap-16 py-12">
                     <h2>What is enterprise resource planning?</h2>
-                    <h3>Enterprise resource planning (ERP) <strong>is a comprehensive software system designed to</strong> integrate and streamline 
+                    <h3>Enterprise resource planning (ERP) is a comprehensive software system designed to integrate and streamline 
                         various aspects of an organization's core business activities. <strong>It serves as a centralized hub that connects different 
                         departments and functions within the organization such as:</strong></h3>
                     <img src="/src/assets/midaflow/context.svg">
-                    <h3>The founders of Midaflow saw a gap in the market. <strong>Predominantly, ERP software systems were only accessible to large 
-                        organizations with the resources to afford such a comprehensive enterprise solution.</strong> They believed that ERP software 
-                        systems should be more accessible and easy-to-use for small and medium-sized businesses. For Midaflow, they focused
-                        their efforts on <strong>the financial aspects of an ERP software system, specifically focusing on</strong> Finance & Accounting, 
-                        Analytics & Reporting, and Purchasing.</h3>
+                    <h3><strong>Predominantly, ERP software systems were only accessible to large organizations with the resources to afford such a comprehensive 
+                        enterprise solution.</strong> The founders of Midaflow saw a gap in the market. They believed that ERP software systems should be more accessible and 
+                        easy-to-use for small and medium-sized businesses. They founded Midaflow and focused their efforts on Finance & Accounting, Analytics & 
+                        Reporting, and Purchasing, the financial components of an ERP software system.</h3>
                 </div>
                 <div id="research" class="flex flex-col gap-16 py-12">
                     <h2>But what did I know about enterprise resource planning?</h2>
-                    <h3><strong>Not much, to be honest.</strong> Prior to Midaflow, I had no idea what an ERP software system was. 
+                    <h3>Prior to Midaflow, I had no idea what an ERP software system was. 
                         <strong>This would have posed a significant challenge for me when designing for this system.</strong>
-                        However, I did notice some similarities between ERP software systems and Shopify<strong>, for which I do have extensive
-                        knowledge and experience in.</strong></h3>
+                        However, I did notice some similarities between ERP software systems and Shopify, for which I do have extensive
+                        knowledge and experience in.</h3>
                     <img src="/src/assets/midaflow/research.svg">
                     <h3>Both systems integrate and streamline various aspects of core business activities, and serve as a centralized hub for their organization.
                         <strong>This comparison helped me understand the core concept of an ERP software system.</strong></h3>
                     <h2 class="pt-16">Learning what works and what doesn't</h2>
-                    <h3><strong>Given the project's time constraints and the extensive research already conducted by the founders, further research was not a priority. </strong>
+                    <h3><strong>Given the project's time constraints and the extensive research already conducted by the founders, further research was not a priority.</strong>
                         So in order for us interns to get a better idea on what could be improved, we conducted discovery research by analyzing user feedback 
                         on our competitors. This allowed us to identify common strengths and weaknesses.</h3>
                     <img src="/src/assets/midaflow/user-feedback.svg" class="w-11/12 mx-auto">
-                    <h3>Based on the feedback, we can see that users value a product that is easy-to-use and reliable. They appreciate intuitive designs tailored for 
-                        both end-users and administrators, as well as strong customer support. However, a wide range of features can overwhelm and confuse users, 
-                        and persistent issues with supplier integration despite regular support can be a major concern.</h3>
+                    <h3>Based on the feedback we reviewed, users value ERP systems for their comprehensive set of features and customization options that streamline operations, 
+                        though challenges like high costs, complexity in customization, and varying customer support levels persist. They appreciate intuitive designs, reliable 
+                        support, and streamlined integration processes to improve usability. However, concerns about feature overload and integration issues underscore the need for ERP 
+                        systems to prioritize user experience enhancements, ensuring they meet operational needs effectively while maintaining user satisfaction.</h3>
                     <h2 class="pt-16">The lifecycle of an invoice</h2>
-                    <h3>A key responsibility I had for this project was designing components for the lifecycle of an invoice. <strong>My only experience with invoices
+                    <h3>A key responsibility I had for this project was designing components for the lifecycle of an invoice. However, I did not have any experience with the 
+                        complete lifecycle of an invoice from both the end-user and issuer perspectives. <strong>My only experience with invoices
                         was during my time running an eCommerce business where I regularly processed and paid invoices for goods purchased. Nothing too complex.</strong>
-                        However, I did not have any experience with the complete lifecycle of an invoice from both the end-user and issuer perspectives. <strong>Similar
-                        to my experience with ERP software systems, this would have posed a significant challenge when designing for this lifecycle.</strong>
+                        <strong>Similar to my experience with ERP software systems, this would have posed a significant challenge when designing for this lifecycle.</strong>
                         To address this issue, I mapped out and analyzed the entire invoice lifecycle, detailing the requirements and features for each stage.</h3>
                     <h3>[Lifecycle Image]</h3>
                     <h3>[Lifecycle Result Placeholder]</h3>
                 </div>
                 <div id="design" class="flex flex-col gap-16 py-12">
                     <h2>Now we're on to the good stuff</h2>
-                    <h3>A bit of background, due to the time constraints of the project, we were tasked with designing the minimum viable product using the components from Chakra UI. 
+                    <h3>A bit of background, due to the time constraints of the project, we were tasked with designing the minimum viable product using components from Chakra UI. 
                         <strong>This limitation meant we could only design within the given design system up to a certain degree.</strong> Nevertheless, this is how I designed our 
                         components for the tasks I was assigned to.</h3>
                     <div class="flex flex-col gap-8">
@@ -557,10 +557,10 @@
                 </div>
                 <div id="final" class="flex flex-col gap-16 py-12">
                     <h2>My final thoughts</h2>
-                    <h3>This experience has been incredibly valuable for my professional development. As what I consider to be my first professional role as a Product Designer, it 
-                        has provided me with a wealth of knowledge and practical experience. I have gained a deeper understanding of the skills and responsibilities required 
-                        to excel in this field. From collaborating with developers to addressing challenges in new industries, I have learned 
-                        the importance of adaptability, communication, and attention to detail.</h3>
+                    <h3><strong>This experience has been incredibly valuable for my professional development. From collaborating with developers to designing for actual users, 
+                        I have learned the importance of adaptability, communication, and user-centered design.</strong> I have gained a deeper understanding of the skills and 
+                        responsibilities required to excel in this field. In what I consider my first professional role as a Product Designer, this experience has provided me 
+                        with a breadth of knowledge and practical experience that I will carry forward into future roles.</h3>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
