--- a/src/index.html
+++ b/src/index.html
@@ -14,27 +14,41 @@
             <div id="nav" class="flex flex-col justify-between items-start fixed gap-4 h-screen w-1/8 py-6"></div>
             <div id="main" class="flex-1 ml-60">
                 <div class="flex flex-col gap-8 py-6">
-                    <h5>Co-Founder & Product Designer at Tooni</h5>
-                    <h1 class="pt-8 pb-24">I design products, interfaces, & experiences. <strong>Combining creativity with user-centric design principles 
-                        to craft products that captivate users and elevate their digital experience.</strong></h1>
+                    <h5>
+                        Co-Founder & Product Designer at Tooni
+                    </h5>
+                    <h1 class="pt-8 pb-24">
+                        I design products, interfaces, & experiences. <strong>Combining creativity with user-centric design principles 
+                        to craft products that captivate users and elevate their digital experience.</strong>
+                    </h1>
                     <div class="flex gap-8">
                         <a href="/src/projects/tooni.html" class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
                             <img class="w-4/5 object-cover py-16"
                                 src="/src/assets/thumbnails/thumbnail-tooni.png">
                             <div class="flex flex-col gap-4 w-full px-12 pb-12">
-                                <h3>Tooni</h3>
+                                <h3>
+                                    Tooni
+                                </h3>
                                 <div class="flex flex-wrap gap-2">
                                     <thumbnail-pill>
-                                        <p class="text-sm text-bk">Founder</p>
+                                        <p class="text-sm text-bk">
+                                            Founder
+                                        </p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-bk">Fintech</p>
+                                        <p class="text-sm text-bk">
+                                            Fintech
+                                        </p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-bk">B2C</p>
+                                        <p class="text-sm text-bk">
+                                            B2C
+                                        </p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-bk">Personal Finance</p>
+                                        <p class="text-sm text-bk">
+                                            Personal Finance
+                                        </p>
                                     </thumbnail-pill>
                                 </div>
                             </div>
@@ -43,19 +57,29 @@
                             <img class="w-4/5 object-cover py-16"
                                 src="/src/assets/thumbnails/thumbnail-midaflow.png">
                             <div class="flex flex-col gap-4 w-full px-12 pb-12">
-                                <h3>Midaflow</h3>
+                                <h3>
+                                    Midaflow
+                                </h3>
                                 <div class="flex flex-wrap gap-2">
                                     <thumbnail-pill>
-                                        <p class="text-sm text-bk">Internship</p>
+                                        <p class="text-sm text-bk">
+                                            Internship
+                                        </p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-bk">Fintech</p>
+                                        <p class="text-sm text-bk">
+                                            Fintech
+                                        </p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-bk">B2B</p>
+                                        <p class="text-sm text-bk">
+                                            B2B
+                                        </p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-bk">ERP System</p>
+                                        <p class="text-sm text-bk">
+                                            ERP System
+                                        </p>
                                     </thumbnail-pill>
                                 </div>
                             </div>
