Changed a paragraph in context and changed strong to 48%

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -113,11 +113,11 @@
                             src="/src/assets/midaflow/context.svg">
                         </banner-image>
                         <p class="text-bk-48">
-                            This is some text inside of a div block.
+                            Different components of an ERP software system.
                         </p>
                     </div>
                     <h3>
-                        <strong>Predominantly, ERP software systems were only accessible to large organizations with the resources to afford such a comprehensive enterprise solution.</strong> The founders of Midaflow saw a gap in the market. They believed that ERP software systems should be more accessible and easy-to-use for small and medium-sized businesses. They founded Midaflow and focused their efforts on Finance & Accounting, Analytics & Reporting, and Purchasing, the financial components of an ERP software system.
+                        <strong>ERP software systems have traditionally been accessible only to large organizations with the resources to afford such comprehensive enterprise solutions.</strong> Recognizing a gap in the market, the founders of Midaflow believed that ERP systems should also be accessible and easy-to-use for small and medium-sized businesses. With this vision, they founded Midaflow, focusing their efforts on the financial components of ERP systems: Finance & Accounting, Analytics & Reporting, and Purchasing.
                     </h3>
                 </div>
                 <div id="research" class="flex flex-col gap-16 py-12">
@@ -831,7 +831,7 @@
                         My final thoughts
                     </h2>
                     <h3>
-                        <strong>This experience has been incredibly valuable for my professional development. From collaborating with developers to designing for actual users, I have learned the importance of adaptability, communication, and user-centered design.</strong> I have gained a deeper understanding of the skills and responsibilities required to excel in this field. In what I consider my first professional role as a Product Designer, this experience has provided me with a breadth of knowledge and practical experience that I will carry forward into future roles.
+                        <strong>This experience has been incredibly valuable for my professional development. From collaborating with developers to designing for actual users, I have learned the importance of adaptability, communication, and user-centered design.</strong> I have gained a deeper understanding of the skills and responsibilities required to excel in this field. In what I consider my first professional role as a Product Designer, this experience has provided me with a breadth of knowledge and experience that I will carry forward into future roles.
                     </h3>
                 </div>
             </div>
