Changed captions and line-height of h1

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -132,7 +132,7 @@
                             src="/src/assets/midaflow/comparison.svg">
                         </banner-image>
                         <p class="text-bk-48">
-                            This is some text inside of a div block.
+                            Comparison between ERP software systems and Shopify.
                         </p>
                     </div>
                     <h3>
@@ -149,7 +149,7 @@
                             src="/src/assets/midaflow/user-feedback.png">
                         </banner-image>
                         <p class="text-bk-48">
-                            This is some text inside of a div block.
+                            User feedback from a competing application.
                         </p>
                     </div>
                     <h3>
